--- a/SimpleLoginScreen/Base.lproj/Main.storyboard
+++ b/SimpleLoginScreen/Base.lproj/Main.storyboard
@@ -290,7 +290,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <segue destination="dcQ-5p-l2e" kind="show" id="GRj-eI-6bJ"/>
+                                            <segue destination="dcQ-5p-l2e" kind="show" identifier="welcomSegue" id="GRj-eI-6bJ"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -309,6 +309,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UmZ-ah-ray"/>
                     </view>
+                    <connections>
+                        <outlet property="signupNameTextField" destination="Jp4-Ki-SOQ" id="abg-68-LBV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9qu-8h-TkT" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="I4y-VI-8zy" userLabel="Exit" sceneMemberID="exit"/>
