--- a/SimpleLoginScreen/Base.lproj/Main.storyboard
+++ b/SimpleLoginScreen/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                         </state>
                                         <connections>
                                             <action selector="signinButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XMG-vv-LmC"/>
-                                            <segue destination="dcQ-5p-l2e" kind="show" identifier="welcomSegue" id="WGU-p6-OXe"/>
+                                            <segue destination="dcQ-5p-l2e" kind="show" identifier="welcomeSegue" id="WGU-p6-OXe"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -293,7 +293,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <segue destination="dcQ-5p-l2e" kind="show" identifier="welcomSegue" id="GRj-eI-6bJ"/>
+                                            <segue destination="dcQ-5p-l2e" kind="show" identifier="welcomeSegue" id="GRj-eI-6bJ"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -386,6 +386,6 @@
         <image name="umbrellacorp" width="238" height="212"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WGU-p6-OXe"/>
+        <segue reference="GRj-eI-6bJ"/>
     </inferredMetricsTieBreakers>
 </document>
