--- a/SimpleLoginScreen/Base.lproj/Main.storyboard
+++ b/SimpleLoginScreen/Base.lproj/Main.storyboard
@@ -57,8 +57,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="signinButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XMG-vv-LmC"/>
-                                            <segue destination="dcQ-5p-l2e" kind="show" identifier="welcomeSegue" id="WGU-p6-OXe"/>
+                                            <segue destination="dcQ-5p-l2e" kind="show" identifier="welcomeSegue" id="6ou-pa-8U1"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -109,7 +108,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="SignInButtonPressed" destination="BI7-pG-Mx1" id="9XR-bo-Vll"/>
+                        <outlet property="SignInButtonPressed" destination="BI7-pG-Mx1" id="d0T-x7-NBW"/>
                         <outlet property="passwordTextField" destination="9t5-xG-R3l" id="N3t-tf-NBA"/>
                         <outlet property="usernameTextField" destination="MEa-I1-I7O" id="rEF-Nf-vZ3"/>
                     </connections>
@@ -386,6 +385,6 @@
         <image name="umbrellacorp" width="238" height="212"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="GRj-eI-6bJ"/>
+        <segue reference="6ou-pa-8U1"/>
     </inferredMetricsTieBreakers>
 </document>
