Add user input validation (is not empty) for Login Screen.

--- a/SimpleLoginScreen/Base.lproj/Main.storyboard
+++ b/SimpleLoginScreen/Base.lproj/Main.storyboard
@@ -386,6 +386,6 @@
         <image name="umbrellacorp" width="238" height="212"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LDD-GA-t6t"/>
+        <segue reference="5hg-vB-6bJ"/>
     </inferredMetricsTieBreakers>
 </document>
